  * createcluster.conf: Add add_include_dir='conf.d' for drop-in PostgreSQL
    config snippets in /etc/postgresql/version/cluster/conf.d/ and
    include_dir='/etc/postgresql-common/createcluster.d' for pg_createcluster
    config snippets.
  * t/051_inconsistent_encoding_upgrade.t: Remove, only relevant for <= 8.2.
  * logrotate config: Ship as static conffile again and remove ucf handling.
  * pg_conftool: --boolean normalizes boolean variable in output; use this in
    debian/maintscripts-functions.
  * debian/maintscripts-functions: Unconditionally call invoke-rc.d, and drop
    path names from program invocations (Standards-Version 4.0.0).
  * debian/maintscripts-functions: Use 'invoke-rc.d "postgresql@$ver-*" stop'
    to prevent upgrading/removing server packages from stopping other major
    version clusters when running systemd. (Closes: #809811)
  * t/TestLib.pm: Vacuum tests left behind when postmaster and pg_autovacuum
    were removed. Update test counts in *.t.

 -- Christoph Berg <myon@debian.org>  Fri, 12 May 2017 21:18:03 +0200

postgresql-common (182) experimental; urgency=medium

  * Team upload.
  * pg_buildext: Resurrect the previously deprecated "srcdir" mode to allow
    building packages from a subdirectory, and make "loop" support it as well.
  * t/001_packages.t: PostgreSQL 10 doesn't have a separate contrib package.
  * t/020_create_sql_remove.t: Use CREATE EXTENSION, createlang is being
    removed.
  * t/120_pg_upgradecluster_scripts.t: Don't try to rename
    pg_upgradecluster.d, fails on overlayfs.
  * pg_lsclusters, t: pg_log directory name changed in 10.
  * pg_lsclusters: Allow listing one version or one cluster only.
  * pg_lsclusters: Support JSON output, suggest libjson-perl for that.
  * pg_createcluster, createcluster.conf: Update for --waldir rename.
  * pg_createcluster: Do not suppress initdb output, and use pg_lsclusters to
    show created cluster info.
  * pg_ctlcluster: Suppress "Redirecting to systemctl message".