@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 33;
+use Test::More tests => 41;
 use File::Temp qw/tempdir/;
 use lib '.';
 use PgCommon;
@@ -13,7 +13,19 @@ use TestLib;
 my $tdir = tempdir (CLEANUP => 1);
 $ENV{'PG_CLUSTER_CONF_ROOT'} = $tdir;
 
+open F, "> $tdir/different.conf";
+print F "a = '5'\n";
+print F "#b = '6'\n";
+close F;
+
+note 'test without cluster';
+is_program_out 0, "pg_conftool show all", 1, "Error: No default cluster found\n";
+is_program_out 0, "pg_conftool foo.conf show all", 1, "Error: No default cluster found\n";
+is_program_out 0, "pg_conftool $tdir/different.conf show all", 0, "a = 5\n";
+is_program_out 0, "pg_conftool 9.7 main show all", 1, "Error: Cluster 9.7 main does not exist\n";
+
 my $version = $MAJORS[-1];
+die "Tests past this point need PostgreSQL installed" unless ($version);
 mkdir "$tdir/$version";
 mkdir "$tdir/$version/main";
 
@@ -25,11 +37,6 @@ close F;
 open F, "> $tdir/$version/main/other.conf";
 print F "a = '3'\n";
 print F "#b = '4'\n";
-close F;
-
-open F, "> $tdir/different.conf";
-print F "a = '5'\n";
-print F "#b = '6'\n";
 close F;
 
 sub pgconf {
